--- a/hcct.tex
+++ b/hcct.tex
@@ -52,7 +52,7 @@ sjeng & 57 & 221 & OOM & 28\,370\,207\,811 \\
 \hline
 \end{tabular}
 \vspace{4mm}
-\caption{\label{tab:hcct-CCTsize} Number of nodes of call graph, call tree, calling context tree, and number of distinct call sites for different applications. OOM stands for {\em Out Of Memory} (i.e., the CCT is too large to be constructed in main memory on a 32-bit architecture). We provide a detailed description of the applications and their workloads in Section \missing.
+\caption{\label{tab:hcct-CCTsize} Number of nodes of call graph, call tree, calling context tree, and number of distinct call sites for different applications. OOM stands for {\em Out Of Memory} (i.e., the CCT is too large to be constructed in main memory on a 32-bit architecture). We provide a detailed description of the applications and their workloads in \mysection\ref{ss:hcct-experimental-setup}.
 %Game PlanetPenguin Racer has been run on courses {\tt mount-herring} and {\tt ice-labyrinth}; similarly, game SuperTuxKart has been run on tracks {\tt overworld} and {\tt scotland}.
 }
 \end{small}
@@ -353,9 +353,9 @@ To analyze the running time, let $\Delta$ be the value of {\tt min} after $k$ {\
 
 \subsection{Discussion}
 
-Compared to the standard approach of maintaining the entire CCT, our solution requires storing the heavy hitters data structure M and the subtree MCCT spanning nodes in M. The space required by M depends on the specific streaming algorithm that is used as a subroutine and on the value chosen for the error threshold $\varepsilon$. For \spacesaving\, this space is proportional to $1/\varepsilon$ and can be customized by appropriately choosing $\varepsilon$, e.g., according to the desired accuracy or to the amount of memory available for profiling. Such a choice appears to be crucial for the effectiveness of our approach: smaller values of $\varepsilon$ guarantee more accurate results (i.e., fewer false positives and more precise counters), but imply a larger memory footprint. In Section \missing\ we will see that the high skewness of context frequency distribution guarantees the existence of very convenient tradeoffs between accuracy and space in the analysis of real-world programs.
+Compared to the standard approach of maintaining the entire CCT, our solution requires storing the heavy hitters data structure M and the subtree MCCT spanning nodes in M. The space required by M depends on the specific streaming algorithm that is used as a subroutine and on the value chosen for the error threshold $\varepsilon$. For \spacesaving\, this space is proportional to $1/\varepsilon$ and can be customized by appropriately choosing $\varepsilon$, e.g., according to the desired accuracy or to the amount of memory available for profiling. Such a choice appears to be crucial for the effectiveness of our approach: smaller values of $\varepsilon$ guarantee more accurate results (i.e., fewer false positives and more precise counters), but imply a larger memory footprint. In \mysection\ref{ss:hcct-eval} we will see that the high skewness of context frequency distribution guarantees the existence of very convenient tradeoffs between accuracy and space in the analysis of real-world programs.
 
-The MCCT consists of nodes corresponding to contexts monitored in M and all their ancestors, which may be cold contexts without a corresponding entry in M. Hence, the space required by the MCCT dominates the space required by M. The number of cold ancestors is difficult to analyze theoretically: it depends on properties of the execution trace and on the structure of the CCT. In Section \missing\ we will see that in practice this amount is negligible compared to the size of M.
+The MCCT consists of nodes corresponding to contexts monitored in M and all their ancestors, which may be cold contexts without a corresponding entry in M. Hence, the space required by the MCCT dominates the space required by M. The number of cold ancestors is difficult to analyze theoretically: it depends on properties of the execution trace and on the structure of the CCT. In \mysection\ref{ss:hcct-accuracy} we will see that in practice this amount is negligible compared to the size of M.
 
 Updates of the MCCT can be performed very quickly. We propose an engineered implementation of \spacesaving\ that hinges upon very simple and cache-efficient data structures, and might be of independent interest.
 
@@ -373,7 +373,7 @@ CCTs have been introduced in~\cite{Ammons97} as a practical data structure to as
 
 \noindent A variety of works explores the combination of sampling with bursting~\cite{Arnold01,Hirzel01,Zhuang06}. Most recently, Zhuang {\em et al.} suggest to perform stack-walking followed by a burst during which the profiler traces every routine call and return~\cite{Zhuang06}: experiments show that adaptive bursting can yield very accurate results. In~\cite{Serrano09}, the profiler infrequently collects small call traces that are merged afterwards to build large calling context trees: ambiguities might emerge during this process, and the lack of information about where the partial CCTs should be merged to does not allow a univocal reconstruction of the entire CCT.
 
-The main goal of all these works is to reduce profiling overhead without incurring significant loss of accuracy. Our approach is orthogonal to this line of research and regards space efficiency as an additional resource optimization criterion besides profile accuracy and time efficiency. When the purpose of profiling is to identify hot contexts, exhaustive instrumentation, sampling, and bursting might all be combined with our approach and benefit of our space reduction technique. In Section \missing\ we present an integration of our technique with static bursting~\cite{Zhuang06}, which results in faster running times without substantially affecting accuracy.
+The main goal of all these works is to reduce profiling overhead without incurring significant loss of accuracy. Our approach is orthogonal to this line of research and regards space efficiency as an additional resource optimization criterion besides profile accuracy and time efficiency. When the purpose of profiling is to identify hot contexts, exhaustive instrumentation, sampling, and bursting might all be combined with our approach and benefit of our space reduction technique. In \mysection\ref{ss:hcct-implementation} we present an integration of our technique with static bursting~\cite{Zhuang06}, which results in faster running times without substantially affecting accuracy.
 
 \paragraph*{Reducing Space.} A few previous works have addressed techniques to reduce profile data (or at least the amount of data presented to the user) in context-sensitive profiling. Incremental call-path profiling lets the user choose a subset of routines to be analyzed~\cite{Bernat07}. Call path refinement helps users focus the attention on performance bottlenecks by limiting and aggregating the information revealed to the user~\cite{Hall95}. These works are quite different in spirit from our approach, where only hot contexts are profiled and identified automatically during program's execution.
 
